Update calendar to handle rendering errors with elemental months, and wrap elements in cards.

--- a/events/blitz_raid/index.html
+++ b/events/blitz_raid/index.html
@@ -16,9 +16,9 @@
                     <div class="card-header">
                         <div class="row">
                             <div class="col col-2">
-                                <a class="btn btn-dark" href="../../event_calendar">
-                                    📅 Calendar
-                                </a>
+                                <button class="btn btn-dark" onclick="history.back()">
+                                    ⬅️ Back
+                                </button>
                             </div>
                             <div class="col d-flex justify-content-center align-items-center">
                                 <h3 class="text-dark">🐉 Blitz Raid 🐉</h3>
