--- a/event_calendar/index.html
+++ b/event_calendar/index.html
@@ -1,39 +1,58 @@
 <!DOCTYPE html>
 <html lang='en'>
-  <head>
-    <link rel="icon" type="image/x-icon" href="../static/favicon.ico">
-    <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.10/index.global.min.js'></script>
-    <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/bootstrap5@6.1.10/index.global.min.js"></script>
+    <head>
+        <link rel="icon" type="image/x-icon" href="../static/favicon.ico">
+        <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.10/index.global.min.js'></script>
+        <script src="https://cdn.jsdelivr.net/npm/@fullcalendar/bootstrap5@6.1.10/index.global.min.js"></script>
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css' rel='stylesheet'>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-    <meta charset="UTF-8">
-    <title>KnD Calendar - Events</title>
-    <script src="./calendar.js"></script>
-    <style>
-      .knd-event-month-1 {
-        background-color: #f4882d;
-      }
-      .knd-event-month-2 {
-        background-color: #8b5ac3;
-      }
-      .knd-event-month-3 {
-        background-color: #b06835;
-      }
-      .knd-event-month-4 {
-        background-color: #e3fafc;
-      }
-      .knd-event-month-5 {
-        background-color: #91d8f4;
-      }
-    </style>
-  </head>
-  <body>
-    <div class="container vh-100">
-      <div class="row h-100 p-4">
-        <div id='calendar'></div>
-      </div>
-    </div>
-  </body>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
+        <link href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css' rel='stylesheet'>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+        <meta charset="UTF-8">
+        <title>KnD Calendar - Events</title>
+        <script src="./calendar.js"></script>
+        <style>
+            .knd-event-month-1 {
+                background-color: #f4882d;
+            }
+            .knd-event-month-2 {
+                background-color: #8b5ac3;
+            }
+            .knd-event-month-3 {
+                background-color: #b06835;
+            }
+            .knd-event-month-4 {
+                background-color: #e3fafc;
+            }
+            .knd-event-month-5 {
+                background-color: #91d8f4;
+            }
+        </style>
+    </head>
+    <body>
+        <div class="container vh-100 py-5">
+            <div class="row d-flex justify-content-center align-items-center h-100">
+                <div class="col h-100">
+                    <div class="card h-100">
+                        <div class="card-header">
+                            <div class="row">
+                                <div class="col col-2">
+                                    <button class="btn btn-dark" onclick="history.back()">
+                                        ⬅️ Back
+                                    </button>
+                                </div>
+                                <div class="col d-flex justify-content-center align-items-center">
+                                    <h3 class="text-dark">📅 Calendar 📅</h3>
+                                </div>
+                                <div class="col col-2"></div>
+                            </div>
+                        </div>
+                        <div class="card-body h-100">
+                            <div id='calendar' class="h-100"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
