--- a/index.html
+++ b/index.html
@@ -10,12 +10,23 @@
 </head>
 <body>
     <div class="container vh-100 pt-5">
-        <div class="row d-flex justify-content-center align-items-center">
+        <div class="row d-flex justify-content-center align-items-center m-2">
             <div class="col col-12 col-md-8 col-lg-6 h-100">
                 <a href="./event_calendar" class="text-decoration-none h-100 w-100">
                     <div class="card h-50">
                         <div class="card-body d-flex justify-content-center align-items-center">
                             <h3 class="text-dark">📅 View Calendar 📅</h3>
+                        </div>
+                    </div>
+                </a>
+            </div>
+        </div>
+        <div class="row d-flex justify-content-center align-items-center m-2">
+            <div class="col col-12 col-md-8 col-lg-6 h-100">
+                <a href="./events" class="text-decoration-none h-100 w-100">
+                    <div class="card h-50">
+                        <div class="card-body d-flex justify-content-center align-items-center">
+                            <h3 class="text-dark">🌌 Event Info 🌌</h3>
                         </div>
                     </div>
                 </a>
