Fill out war page and update back button references.

--- a/events/blitz_raid/index.html
+++ b/events/blitz_raid/index.html
@@ -9,16 +9,16 @@
     <title>Blitz Raid</title>
 </head>
 <body>
-    <div class="container vh-100 pt-5">
+    <div class="container vh-100 my-3">
         <div class="row d-flex justify-content-center align-items-center">
             <div class="col col-12 col-md-8 col-lg-6 h-100">
-                <div class="card h-50">
+                <div class="card my-2">
                     <div class="card-header">
                         <div class="row">
                             <div class="col col-2">
-                                <button class="btn btn-dark" onclick="history.back()">
+                                <a class="btn btn-dark" href="..">
                                     ⬅️ Back
-                                </button>
+                                </a>
                             </div>
                             <div class="col d-flex justify-content-center align-items-center">
                                 <h3 class="text-dark">🐉 Blitz Raid 🐉</h3>
