--- a/event_calendar/index.html
+++ b/event_calendar/index.html
@@ -37,9 +37,9 @@
                         <div class="card-header">
                             <div class="row">
                                 <div class="col col-2">
-                                    <button class="btn btn-dark" onclick="history.back()">
+                                    <a class="btn btn-dark" href="..">
                                         ⬅️ Back
-                                    </button>
+                                    </a>
                                 </div>
                                 <div class="col d-flex justify-content-center align-items-center">
                                     <h3 class="text-dark">📅 Calendar 📅</h3>
