--- a/events/index.html
+++ b/events/index.html
@@ -9,16 +9,16 @@
     <title>KnD Calendar</title>
 </head>
 <body>
-    <div class="container vh-100 pt-5">
+    <div class="container vh-100 my-3">
         <div class="row d-flex justify-content-center align-items-center">
             <div class="col col-12 col-md-8 col-lg-6 h-100">
-                <div class="card h-50">
+                <div class="card my-2">
                     <div class="card-header">
                         <div class="row">
                             <div class="col col-2">
-                                <button class="btn btn-dark" onclick="history.back()">
+                                <a class="btn btn-dark" href="..">
                                     ⬅️ Back
-                                </button>
+                                </a>
                             </div>
                             <div class="col d-flex justify-content-center align-items-center">
                                 <h3 class="text-dark">🌌 Event Info 🌌</h3>
@@ -31,7 +31,7 @@
                             <div class="row d-flex justify-content-center align-items-center m-2">
                                 <div class="col">
                                     <a href="./war" class="text-decoration-none h-100 w-100">
-                                        <div class="card h-50">
+                                        <div class="card my-2">
                                             <div class="card-body d-flex justify-content-center align-items-center">
                                                 <h3 class="text-dark">⚔️ War ⚔️</h3>
                                             </div>
@@ -42,7 +42,7 @@
                             <div class="row d-flex justify-content-center align-items-center m-2">
                                 <div class="col">
                                     <a href="./blitz_war" class="text-decoration-none h-100 w-100">
-                                        <div class="card h-50">
+                                        <div class="card my-2">
                                             <div class="card-body d-flex justify-content-center align-items-center">
                                                 <h3 class="text-dark">🗡️ Blitz War 🗡️</h3>
                                             </div>
@@ -53,7 +53,7 @@
                             <div class="row d-flex justify-content-center align-items-center m-2">
                                 <div class="col">
                                     <a href="./set_blitz" class="text-decoration-none h-100 w-100">
-                                        <div class="card h-50">
+                                        <div class="card my-2">
                                             <div class="card-body d-flex justify-content-center align-items-center">
                                                 <h3 class="text-dark">🗡️ Set Blitz 🗡️</h3>
                                             </div>
@@ -64,7 +64,7 @@
                             <div class="row d-flex justify-content-center align-items-center m-2">
                                 <div class="col">
                                     <a href="./raid" class="text-decoration-none h-100 w-100">
-                                        <div class="card h-50">
+                                        <div class="card my-2">
                                             <div class="card-body d-flex justify-content-center align-items-center">
                                                 <h3 class="text-dark">🐉 Raid 🐉</h3>
                                             </div>
@@ -75,7 +75,7 @@
                             <div class="row d-flex justify-content-center align-items-center m-2">
                                 <div class="col">
                                     <a href="./blitz_raid" class="text-decoration-none h-100 w-100">
-                                        <div class="card h-50">
+                                        <div class="card my-2">
                                             <div class="card-body d-flex justify-content-center align-items-center">
                                                 <h3 class="text-dark">🐉 Blitz Raid 🐉</h3>
                                             </div>
@@ -86,7 +86,7 @@
                             <div class="row d-flex justify-content-center align-items-center m-2">
                                 <div class="col">
                                     <a href="./heroic" class="text-decoration-none h-100 w-100">
-                                        <div class="card h-50">
+                                        <div class="card my-2">
                                             <div class="card-body d-flex justify-content-center align-items-center">
                                                 <h3 class="text-dark">🏰 Heroic Mode 🏰</h3>
                                             </div>
