--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <title>KnD Calendar</title>
 </head>
 <body>
-    <div class="container vh-100 pt-5">
+    <div class="container vh-100 my-3">
         <div class="row d-flex justify-content-center align-items-center m-2">
             <div class="col col-12 col-md-8 col-lg-6 h-100">
                 <a href="./event_calendar" class="text-decoration-none h-100 w-100">
-                    <div class="card h-50">
+                    <div class="card my-2">
                         <div class="card-body d-flex justify-content-center align-items-center">
                             <h3 class="text-dark">📅 View Calendar 📅</h3>
                         </div>
@@ -24,7 +24,7 @@
         <div class="row d-flex justify-content-center align-items-center m-2">
             <div class="col col-12 col-md-8 col-lg-6 h-100">
                 <a href="./events" class="text-decoration-none h-100 w-100">
-                    <div class="card h-50">
+                    <div class="card my-2">
                         <div class="card-body d-flex justify-content-center align-items-center">
                             <h3 class="text-dark">🌌 Event Info 🌌</h3>
                         </div>
