Update war page and combine war, blitz war, and set blitz into 1 page.

--- a/events/index.html
+++ b/events/index.html
@@ -21,7 +21,7 @@
                                 </a>
                             </div>
                             <div class="col d-flex justify-content-center align-items-center">
-                                <h3 class="text-dark">🌌 Event Info 🌌</h3>
+                                <h3 class="text-dark">🌌 Events & Info 🌌</h3>
                             </div>
                             <div class="col col-2"></div>
                         </div>
@@ -41,43 +41,10 @@
                             </div>
                             <div class="row d-flex justify-content-center align-items-center m-2">
                                 <div class="col">
-                                    <a href="./blitz_war" class="text-decoration-none h-100 w-100">
-                                        <div class="card my-2">
-                                            <div class="card-body d-flex justify-content-center align-items-center">
-                                                <h3 class="text-dark">🗡️ Blitz War 🗡️</h3>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="row d-flex justify-content-center align-items-center m-2">
-                                <div class="col">
-                                    <a href="./set_blitz" class="text-decoration-none h-100 w-100">
-                                        <div class="card my-2">
-                                            <div class="card-body d-flex justify-content-center align-items-center">
-                                                <h3 class="text-dark">🗡️ Set Blitz 🗡️</h3>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="row d-flex justify-content-center align-items-center m-2">
-                                <div class="col">
                                     <a href="./raid" class="text-decoration-none h-100 w-100">
                                         <div class="card my-2">
                                             <div class="card-body d-flex justify-content-center align-items-center">
                                                 <h3 class="text-dark">🐉 Raid 🐉</h3>
-                                            </div>
-                                        </div>
-                                    </a>
-                                </div>
-                            </div>
-                            <div class="row d-flex justify-content-center align-items-center m-2">
-                                <div class="col">
-                                    <a href="./blitz_raid" class="text-decoration-none h-100 w-100">
-                                        <div class="card my-2">
-                                            <div class="card-body d-flex justify-content-center align-items-center">
-                                                <h3 class="text-dark">🐉 Blitz Raid 🐉</h3>
                                             </div>
                                         </div>
                                     </a>
