--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <a href="./events" class="text-decoration-none h-100 w-100">
                     <div class="card my-2">
                         <div class="card-body d-flex justify-content-center align-items-center">
-                            <h3 class="text-dark">🌌 Event Info 🌌</h3>
+                            <h3 class="text-dark">🌌 Events & Info 🌌</h3>
                         </div>
                     </div>
                 </a>
