--- a/events/war/index.html
+++ b/events/war/index.html
@@ -323,7 +323,7 @@
                 var listItem = document.createElement('li');
                 var anchor = document.createElement('a');
                 anchor.setAttribute('class', 'dropdown-item');
-                anchor.setAttribute('href', '#' + originalId); // Assuming you want to link to the original ID
+                anchor.setAttribute('href', '#' + originalId);
                 anchor.textContent = indexName;
 
                 listItem.appendChild(anchor);
