--- a/events/index.html
+++ b/events/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="icon" type="image/x-icon" href="./static/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="../static/favicon.ico">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css' rel='stylesheet'>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
@@ -56,6 +56,28 @@
                                         <div class="card my-2">
                                             <div class="card-body d-flex justify-content-center align-items-center">
                                                 <h3 class="text-dark">🏰 Heroic Mode 🏰</h3>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="row d-flex justify-content-center align-items-center m-2">
+                                <div class="col">
+                                    <a href="./pets" class="text-decoration-none h-100 w-100">
+                                        <div class="card my-2">
+                                            <div class="card-body d-flex justify-content-center align-items-center">
+                                                <h3 class="text-dark">🐦 Pets 🐦</h3>
+                                            </div>
+                                        </div>
+                                    </a>
+                                </div>
+                            </div>
+                            <div class="row d-flex justify-content-center align-items-center m-2">
+                                <div class="col">
+                                    <a href="./tips_and_tricks" class="text-decoration-none h-100 w-100">
+                                        <div class="card my-2">
+                                            <div class="card-body d-flex justify-content-center align-items-center">
+                                                <h3 class="text-dark">✨ Tips & Tricks ✨</h3>
                                             </div>
                                         </div>
                                     </a>
