Add gems guide.

--- a/events/tips_and_tricks/index.html
+++ b/events/tips_and_tricks/index.html
@@ -48,6 +48,28 @@
                                             </ul>
                                         </div>
                                     </li>
+                                    <li class="list-group-item indexed" id="gems">
+                                        <h6>
+                                            Gems
+                                        </h6>
+                                        <div class="p-3">
+                                            Here is an approximate starter guide on what you can easily get for gems
+                                            each month.
+                                            <ul class="m-2">
+                                                <li>30 videos x 28 = 840</li>
+                                                <li>Raid Milestones = 42</li>
+                                                <li>War Milestones = 70</li>
+                                                <li>Blitz War Milestones = 76</li>
+                                                <li>Arena Quests = 12</li>
+                                                <li>Arena Weekly = 168</li>
+                                                <li>Arena Milestones = 88</li>
+                                                <li>Daily Gems = 138</li>
+                                            </ul>
+                                            <div class="fw-bold">
+                                                Total = 1434 (Monthly)
+                                            </div>
+                                        </div>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
